<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signUpGoThrough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_go_through"
        android:fontFamily="@font/rubik_medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        />

    <ImageButton
        android:id="@+id/signUpFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_iconfinder_facebook_834722"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoThrough"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpGoogle"
        />
    <ImageButton
        android:id="@+id/signUpGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_google"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoThrough"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signUpFacebook"
        />
    <TextView
        android:id="@+id/signUpFacebookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/sign_up_facebook"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/signUpFacebook"
        app:layout_constraintEnd_toEndOf="@id/signUpFacebook"
        app:layout_constraintTop_toBottomOf="@id/signUpFacebook"
        />
    <TextView
        android:id="@+id/signUpGoogleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/sign_up_google"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/signUpGoogle"
        app:layout_constraintEnd_toEndOf="@id/signUpGoogle"
        app:layout_constraintTop_toBottomOf="@id/signUpGoogle"
        />

    <ImageView
        android:id="@+id/signUpLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/solid_line"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpFacebookText"
        />

    <TextView
        android:id="@+id/signUpThroughEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_through_email"
        android:fontFamily="@font/rubik_medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpLine"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpThroughEmail"
        android:hint="@string/sign_up_email"
        android:fontFamily="@font/rubik_medium"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        android:hint="@string/sign_up_password"
        android:fontFamily="@font/rubik_medium"
        android:layout_margin="30dp"
        />

    <EditText
        android:id="@+id/signUpRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
        android:hint="@string/sign_up_password_repeat"
        android:fontFamily="@font/rubik_medium"
        android:layout_margin="30dp"
        />

    <CheckBox
        android:id="@+id/signUpCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpRepeatPassword"
        android:layout_margin="30dp"
        />
    <TextView
        android:id="@+id/signUpAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_agree"
        android:fontFamily="@font/rubik_medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/signUpCheckBox"
        app:layout_constraintTop_toTopOf="@id/signUpCheckBox"
        app:layout_constraintBottom_toBottomOf="@id/signUpCheckBox"
/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signUpCheckBox"
        android:background="@drawable/rectangle"
        android:layout_margin="40dp"
        android:fontFamily="@font/rubik_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/welcome_signup"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>