<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/theoryInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/theory_instruction"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/theoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:textSize="14sp"
        android:textColor="@color/grey_ultra_hard"
        android:textAlignment="textStart"
        android:text="@string/welcome_latin"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/theoryInstruction"
        app:layout_constraintStart_toStartOf="@id/theoryInstruction"
        />

    <TextView
        android:id="@+id/theoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/title_theory"
        app:layout_constraintTop_toBottomOf="@id/theoryDescription"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chooseLanguageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/theory_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/theoryName"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>